# youvedio

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  ROADMAP.md  opencode.json  pyproject.toml  sources.json
.github/scripts/: gen_changelog.py
.github/workflows/: ci.yml  release.yml
.opencode/skills/youvedio-torrent-search/: SKILL.md
src/youvedio/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  models.py  translation.py  web.py
src/youvedio/analyzer/: classify_ai.py  site.py
src/youvedio/crawler/: classifier.py  engine.py
src/youvedio/sources/: __init__.py  discoverer.py  manager.py
src/youvedio/sources/sites/: __init__.py  acgrip.py  anidex.py  base.py  dmhy.py  mikan.py  nyaa.py  tokyotosho.py  x1337.py
src/youvedio/static/: style.css
src/youvedio/storage/: cache.py
src/youvedio/templates/: index.html
tests/: test_acgrip.py  test_anidex.py  test_cache.py  test_classifier.py  test_dmhy.py  test_engine.py  test_manager.py  test_mcp.py  test_mikan_parser.py  test_models.py  test_nyaa.py  test_sites.py  test_tokyotosho.py  test_x1337.py
