[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "youvedio"
version = "0.1.0"
description = "种子/磁力搜索引擎 MCP Server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "YouVedio Team"}
]
license = {text = "MIT"}
dependencies = [
    "scrapling[fetchers]>=0.4.9",
    "mcp>=1.27.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "click>=8.3.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
]

[project.urls]
Repository = "https://github.com/Administrator/YouVedio"

[tool.setuptools.packages.find]
where = ["src"]
include = ["youvedio*"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
